# todoapprd

./: .coverage  .dockerignore  .env  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pixi.toml  pyproject.toml  todos.db
.github/workflows/: deploy.yaml
docs/: app.html  index.html  robots.txt  search.json  sitemap.xml  sql.html
instance/: todos.db
notebooks/: app.ipynb  index.qmd  nbdev.yml  settings.ini  sidebar.yml  sql.ipynb
tests/: conftest.py  test_app.py  test_sql.py
todoapp/: __init__.py  app.py  config.py  sql.py
