[project]
name = "todoapprd"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Rahul Dave", email = "rahuldave@gmail.com" }]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["todoapp"]
package-dir = { "" = "." }


[tool.pyright]
venvPath = "."
venv = ".pixi/envs/dev"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # McCabe
    "C",
    # Bugbear
    "B",
    # isort
    "I",
    # bandit
    "S",
    # mypy
    "ANN",
]

ignore = [
    # bandit
    "S101",   # dont warn on asserts
    "E203",   # dont complain about whitespace before :
    "ANN401",
]

mccabe.max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S608"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true


[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["sqlite3", "pytest", "flask", "dotenv"]
ignore_missing_imports = true
